fix the contrast warning

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -89,7 +89,7 @@ body {
       font-size: 18px;
       line-height: 120%;
       letter-spacing: 0%;
-      color: $primary-color;
+      color: rgb(99, 103, 224);
       border: 1px solid transparent;
       cursor: pointer;
       transition: 125ms ease-in-out;
