--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,7 +113,7 @@ input:-internal-autofill-selected {
     font-size: 18px;
     line-height: 120%;
     letter-spacing: 0%;
-    color: $primary-color;
+    color: rgb(77, 82, 189) !important;
     border: 1px solid transparent;
     cursor: pointer;
     transition: 125ms ease-in-out;
